--- a/index.html
+++ b/index.html
@@ -309,6 +309,150 @@
           <div class="nicehash"></div>
         </div>
       </div>
+      <div class="futurestrading">
+        <div class="futuretitletab">
+          <div class="futuremainhead">Futures trading on Cryptocurrencies</div>
+        </div>
+        <div class="futurediscriptab1">
+          <div class="futurediscrip1"
+            >Many exchanges provide us with a leveraged futures trading on several
+            cryto pairs.</div
+          >
+        </div>
+        <div class="futurediscriptab2">
+          <div class="futurediscrip2"
+            >In LighSpeed Miners, we are engaged with Our professional traders
+            that work on the charts Day & Night.</div
+          >
+        </div>
+        <div class="futuretab">
+        <div class="size"><div class="laptop"></div></div>
+          <div class="performedon"
+          >Futures trading are performed on the following pairs</div
+        >
+          <div class="pairtab">
+            <div class="btcusdt">
+              <div class="btcusdtlogo"></div>
+              <span class="btcusdtfont">BTC/USDT Perpectual</span>
+            </div>
+            <div class="ethusdt">
+              <div class="ethusdtlogo"></div>
+              <span class="ethusdtfont">ETH/USDT Perpectual</span>
+            </div>
+            <div class="trxusdt">
+              <div class="trxusdtlogo"></div>
+              <span class="trxusdtfont">TRX/USDT Perpectual</span>
+            </div>
+            <div class="bnbusdt">
+              <div class="bnbusdtlogo"></div>
+              <span class="bnbusdtfont">BNB/USDT Perpectual</span>
+            </div>
+          </div>
+          <div class="tradingperform">Trading performed on</div>
+          <div class="size"><div class="binancelogo"></div></div>
+        </div>
+      </div>
+      <div class="liquidity">
+        <div class="liquiditytitletab">
+          <span class="liquiditymaintitle">Deep diving into liquidity pools</span>
+        </div>
+        <div class="liqdiscriptab1">
+          <span class="liqdiscrip1">By providing liquidity to the tokens,</span>
+        </div>
+        <div class="liqdiscriptab2">
+          <span class="liqdiscrip2"
+            >we earn a few portion of the transaction fees as liquidity provider
+            per transaction from the pool.</span
+          >
+        </div>
+        <div class="liqmaintab">
+          <span class="activehead"
+            >Active liquidity pools by lightspeed Miners</span
+          >
+          <div class="liqpairtab">
+            <div class="cake">
+              <div class="cakelogo"></div>
+              <span class="cakefont">Cake/BNB APR 1.82%</span>
+            </div>
+            <div class="brise">
+              <div class="briselogo"></div>
+              <span class="brisefont">Brise/BNB APR 4.47%</span>
+            </div>
+            <div class="alpaca">
+              <div class="alpacalogo"></div>
+              <span class="alpacafont">Alpaca/BNB APR 16.38%</span>
+            </div>
+            <div class="safemoon">
+              <div class="safemoonlogo"></div>
+              <span class="safemoonfont">SFM/BNB APR 98.34%</span>
+            </div>
+          </div>
+          <span class="deployon">Liquidity pools are deployed on</span>
+          <div class="pancake"></div>
+        </div>
+      </div>
+      <div class="contactus">
+        <div class="contactustitletab">
+          <span class="contactusmainhead">Contact US</span>
+        </div>
+        <div class="contactusdistab1">
+          <span class="contactusdis1"
+            >If have any questions or any problem, then don't hesitate in
+            contacting us.</span
+          >
+        </div>
+        <div class="contactusdistab2">
+          <span class="contactusdis2"
+            >We will try our best to solve your problem.</span
+          >
+          <div class="socialmediatab">
+            <div class="email">
+              <div class="emaillogo"></div>
+              <span class="emailfont">E-mail</span>
+            </div>
+            <div class="twitter">
+              <div class="twitterlogo"></div>
+              <span class="twitterfont">Twitter</span>
+            </div>
+            <div class="insta">
+              <div class="instalogo"></div>
+              <span class="instafont">Instagram</span>
+            </div>
+            <div class="youtube">
+              <div class="youtubelogo"></div>
+              <span class="youtubefont">Youtube</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="text3tab">
+          <div class="aboutustab">
+            <span class="aboutushead">About us</span>
+            <span class="aboutusdis"
+              >Lightspeed miner is an crypto-miner based on web3 practices &
+              provides us a easy way to generate stable income.</span
+            >
+          </div>
+          <div class="imptab">
+            <span class="imphead">Important Links</span>
+            <span class="impdis"
+              >Read our Terms & Conditions, Privacy Policy. Learn how to use the
+              APP.</span
+            >
+          </div>
+          <div class="socialtab">
+            <span class="socialhead">Social Media</span>
+            <div class="socialbuttons">
+              <div class="emailbutton"></div>
+              <div class="tweetbutton"></div>
+              <div class="instabutton"></div>
+              <div class="youtubebutton"></div>
+            </div>
+          </div>
+        </div>
+        <span class="appby">App by lightspeed Miners | ©Lightspeed 2022-23</span>
+      </div>
 
 
         </body>
