--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             >What Lightspeed miners are engaged With?</div> 
           <div class="box3">
             <div class="hash">
-              <div class="hashicon"></div>
+              <div class="size"><div class="hashicon"></div></div>
               <div class="hashheading">Hashpower Buying</div>
               <div class="hashdiscrip"
                 >Hash power is used for mining different cryptocurrencies in the
@@ -75,7 +75,7 @@
               </div>
             </div>
             <div class="trading">
-              <div class="tradingicon"></div>
+              <div class="size"><div class="tradingicon"></div></div>
               <div class="tradingheading">Futures Trading</div>
               <div class="tradingdiscrip"
                 >pairs like BTC/USDT and ETH/USDT are traded on FUtures with a
@@ -92,7 +92,7 @@
               </div>
             </div>
             <div class="tokenmania">
-              <div class="tokenicon"></div>
+              <div class="size"><div class="tokenicon"></div></div>
               <div class="tokenmaniaheading">Token mania</div>
               <div class="tokenmaniadiscrip"
                 >Investing on liquidity pools of tokens with low market capital
@@ -354,20 +354,20 @@
       </div>
       <div class="liquidity">
         <div class="liquiditytitletab">
-          <span class="liquiditymaintitle">Deep diving into liquidity pools</span>
+          <div class="liquiditymaintitle">Deep diving into liquidity pools</div>
         </div>
         <div class="liqdiscriptab1">
-          <span class="liqdiscrip1">By providing liquidity to the tokens,</span>
+          <div class="liqdiscrip1">By providing liquidity to the tokens,</div>
         </div>
         <div class="liqdiscriptab2">
-          <span class="liqdiscrip2"
+          <div class="liqdiscrip2"
             >we earn a few portion of the transaction fees as liquidity provider
-            per transaction from the pool.</span
+            per transaction from the pool.</div
           >
         </div>
         <div class="liqmaintab">
-          <span class="activehead"
-            >Active liquidity pools by lightspeed Miners</span
+          <div class="activehead"
+            >Active liquidity pools by lightspeed Miners</div
           >
           <div class="liqpairtab">
             <div class="cake">
@@ -387,40 +387,40 @@
               <span class="safemoonfont">SFM/BNB APR 98.34%</span>
             </div>
           </div>
-          <span class="deployon">Liquidity pools are deployed on</span>
-          <div class="pancake"></div>
+          <div class="deployon">Liquidity pools are deployed on</div>
+         <div class="size"><div class="pancake"></div></div> 
         </div>
       </div>
       <div class="contactus">
         <div class="contactustitletab">
-          <span class="contactusmainhead">Contact US</span>
+          <div class="contactusmainhead">Contact US</div>
         </div>
         <div class="contactusdistab1">
-          <span class="contactusdis1"
+          <div class="contactusdis1"
             >If have any questions or any problem, then don't hesitate in
-            contacting us.</span
+            contacting us.</div
           >
         </div>
         <div class="contactusdistab2">
-          <span class="contactusdis2"
-            >We will try our best to solve your problem.</span
+          <div class="contactusdis2"
+            >We will try our best to solve your problem.</div
           >
           <div class="socialmediatab">
             <div class="email">
               <div class="emaillogo"></div>
-              <span class="emailfont">E-mail</span>
+              <div class="emailfont">E-mail</div>
             </div>
             <div class="twitter">
               <div class="twitterlogo"></div>
-              <span class="twitterfont">Twitter</span>
+              <div class="twitterfont">Twitter</div>
             </div>
             <div class="insta">
               <div class="instalogo"></div>
-              <span class="instafont">Instagram</span>
+              <div class="instafont">Instagram</div>
             </div>
             <div class="youtube">
               <div class="youtubelogo"></div>
-              <span class="youtubefont">Youtube</span>
+              <div class="youtubefont">Youtube</div>
             </div>
           </div>
         </div>
@@ -451,7 +451,7 @@
             </div>
           </div>
         </div>
-        <span class="appby">App by lightspeed Miners | ©Lightspeed 2022-23</span>
+        <div class="appby">App by lightspeed Miners | ©Lightspeed 2022-23</div>
       </div>
 
 
